# discord-bot-test

./: .gitignore  main.py  pyproject.toml
