[project]
name = "discord-bot-test"
version = "0.1.0"
description = "A test project to build a discord bot"
authors = [
    {name = "AndresSanRo",email = "andres.san.ro@outlook.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "discord-py (>=2.4.0,<3.0.0)",
    "audioop-lts (>=0.2.1,<0.3.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins.dotenv]
ignore = "false"
location = ".env.dev"
